# ch-nixops-example

./: LICENSE  Main.hs  README.md  ch-nixops-example.cabal  config-nixops.nix  default.nix  dp-nixops-example.cabal  shell.nix
