name:                dp-nixops-example
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Yves Parès, Arnaud Spiwack
build-type:          Simple
cabal-version:       >=1.10

executable dp-nixops-example
  main-is:             Main.hs
  build-depends:       base >=4.8, directory, filepath, distributed-process, network-transport, network-transport-tcp, time, bytestring
  default-language:    Haskell2010
